src/landingPage/ToolsSection.module.scss
.container {
  background: #26282c;
  min-height: 150vh;
  padding-top: 25vh;
  padding-bottom: 15vh;
  width: 100%;

  .subcontainer {
    position: relative;
    max-width: 1600px;
    margin: 0 auto;
    padding: 0 10vw;
    padding-bottom: 15vh;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;

    h1 {
      color: #e3e3e3;
      font-size: 6rem;
      font-weight: 900;
      padding-top: 10vh;
      padding-bottom: 8vh;
      line-height: 90%;
      width: 100%;
  
      .gradient {
        background-clip: unset;
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
        background-image: var(--std-gradient);
      }
    }
  
    ul.parameters {
      list-style: none;
      width: 30%;

      li {
        display: flex;
        flex-direction: column;
        justify-content: center;
        min-height: 70vh;

        h2 {
          margin-top: 4vh;
          font-weight: 800;
          font-size: 1.7rem;
          color: teal;
        }
    
        p {
          color: #e3e3e3;
          margin-top: 5vh;
          font-size: 1.25rem;
          margin-top: 0%;
          margin-bottom: 3vh;
          line-height: 1.8rem;
        } 
      }
    }
  }

}

.stickyBoxBounds {
  position: sticky;
  top: 20vh;
  height: 100%;
  width: 40%;

  .stickyBox {
    height: 60vh;
  }
}

